Compilador/Compilador/out/production/Compilador/com/tp/compiladores/y.output
   0  $accept : Programa $end

   1  Programa : Nombre_programa '{' ListSentencias '}'
   2           | Nombre_programa ListSentencias '}'
   3           | Nombre_programa ListSentencias
   4           | error '}'

   5  Nombre_programa : ID

   6  ListSentencias : SentenciaControl ListSentencias
   7                 | SentenciaDeclarativa ListSentencias
   8                 | SentenciaEjecutable ListSentencias
   9                 | SentenciaEjecutable
  10                 | SentenciaControl
  11                 | SentenciaDeclarativa

  12  SentenciaDeclarativa : Tipo ListVariables ';'
  13                       | Tipo error ';'
  14                       | Funcion
  15                       | CONST ListCte ';'
  16                       | WhenCondicion
  17                       | ListVariables ';'
  18                       | Tipo ';'

  19  ListCte : AsigCte
  20          | ListCte ',' AsigCte

  21  AsigCte : ID ASIGNACION CTE_ENTERA
  22          | ID ASIGNACION signo CTE_ENTERA
  23          | ID ASIGNACION CTE_FLOTANTE
  24          | ID ASIGNACION signo CTE_FLOTANTE
  25          | ASIGNACION cte
  26          | ID ASIGNACION
  27          | ID cte

  28  Tipo : I8
  29       | F32

  30  ListVariables : ID ',' ListVariables
  31                | ID
  32                | ID ListVariables

  33  HeaderFuncion : Fun '(' Parametro ',' Parametro ')' ':' Tipo
  34                | Fun '(' Parametro ')' ':' Tipo
  35                | Fun '(' ')' ':' Tipo
  36                | FUN '(' Parametro ',' Parametro ')' ':' Tipo
  37                | FUN '(' Parametro ')' ':' Tipo
  38                | FUN '(' ')' ':' Tipo
  39                | Fun '(' Parametro ',' Parametro ')' ':'
  40                | Fun '(' Parametro ')' ':'
  41                | Fun '(' ')' ':'

  42  Fun : FUN ID

  43  Funcion : HeaderFuncion '{' Cuerpo '}'
  44          | HeaderFuncion '{' '}'
  45          | '{' Cuerpo '}'
  46          | HeaderFuncion '{' ListSentencias '}'

  47  Parametro : Tipo ID
  48            | ID

  49  Cuerpo : SentenciaEjecutable Cuerpo
  50         | SentenciaDeclarativa Cuerpo
  51         | SentenciaReturn

  52  SentenciaEjecutable : Seleccion
  53                      | Asig
  54                      | Salida ';'

  55  Asig : ID ASIGNACION Expresion ';'
  56       | ID ASIGNACION ID ';'
  57       | ID ASIGNACION cte ';'
  58       | ID ASIGNACION signo cte ';'
  59       | ID error ';'

  60  HeaderWhen : WHEN Condicion THEN
  61             | Condicion THEN
  62             | WHEN Condicion

  63  WhenCondicion : HeaderWhen '{' ListSentencias '}'
  64                | error '}'

  65  Salida : OUT '(' CADENA_MULT ')'
  66         | '(' CADENA_MULT ')'

  67  ParametroReal : cte
  68                | signo cte
  69                | ID

  70  Expresion : ID signo ID
  71            | ID signo cte
  72            | Expresion signo ID
  73            | Expresion signo cte
  74            | ID '*' ID
  75            | ID '/' ID
  76            | ID '*' cte
  77            | ID '/' cte
  78            | Expresion '*' ID
  79            | Expresion '/' ID
  80            | Expresion '*' cte
  81            | Expresion '/' cte
  82            | ConversionExplicita
  83            | cte signo ID
  84            | cte '*' ID
  85            | cte '/' ID
  86            | ID ListParametrosInv

  87  ListParametrosInv : '(' ')'
  88                    | '(' ParametroReal ')'
  89                    | '(' ParametroReal ',' ParametroReal ')'

  90  ConversionExplicita : TOF32 '(' Expresion ')'
  91                      | TOF32 '(' ')'

  92  signo : '+'
  93        | '-'

  94  cte : CTE_FLOTANTE
  95      | CTE_ENTERA

  96  SentenciaReturn : RETURN '(' ID ')' ';'
  97                  | RETURN '(' cte ')' ';'
  98                  | RETURN '(' Expresion ')' ';'
  99                  | RETURN '(' ID ')'
 100                  | RETURN '(' cte ')'
 101                  | RETURN '(' Expresion ')'
 102                  | RETURN ';'

 103  ListSentenciasIf : SentenciaEjecutable ListSentenciasIf
 104                   | SentenciaCorte ListSentenciasIf
 105                   | SentenciaEjecutable
 106                   | SentenciaCorte

 107  HeaderIf : IF Condicion THEN
 108           | error THEN

 109  SentenciasIf : SentenciaEjecutable
 110               | '{' ListSentenciasIf '}'

 111  CuerpoIf : SentenciasIf

 112  CuerpoElse : ELSE CuerpoIf END_IF
 113             | ELSE CuerpoIf error

 114  Seleccion : HeaderIf CuerpoIf END_IF
 115            | HeaderIf CuerpoIf CuerpoElse
 116            | HeaderIf CuerpoIf error
 117            | error ELSE
 118            | error END_IF

 119  Condicion : '(' Comparacion ')'
 120            | '(' Comparacion
 121            | Comparacion ')'

 122  Comparador : '<'
 123             | '>'
 124             | MAYOR_IGUAL
 125             | MENOR_IGUAL
 126             | '='
 127             | DISTINTO

 128  Comparacion : Expresion Comparador Expresion
 129              | Expresion Comparador cte
 130              | Expresion Comparador signo cte
 131              | cte Comparador Expresion
 132              | signo cte Comparador Expresion
 133              | Expresion Comparador ID
 134              | ID Comparador Expresion
 135              | cte Comparador ID
 136              | signo cte Comparador ID
 137              | ID Comparador cte
 138              | ID Comparador signo cte
 139              | ID Comparador ID
 140              | cte Comparador cte
 141              | Comparador error
 142              | error ID
 143              | error cte

 144  ListSentenciasFor : ListSentenciasFor SentenciaEjecutable
 145                    | ListSentenciasFor SentenciaControl
 146                    | ListSentenciasFor SentenciaCorte
 147                    | SentenciaControl
 148                    | SentenciaEjecutable
 149                    | SentenciaCorte

 150  HeaderFor : FOR '(' AsigFor ';' CondicionFor ';' signo CTE_ENTERA ')'
 151            | FOR '(' AsigFor ';' CondicionFor ';' CTE_ENTERA ')'

 152  HeaderForID : ID ASIGNACION HeaderFor

 153  HeaderEtiqueta : ID ':' HeaderFor

 154  AsigFor : ID ASIGNACION CTE_ENTERA
 155          | ID ASIGNACION ID

 156  CuerpoFor : '{' ListSentenciasFor '}'
 157            | '{' '}' ';'

 158  SentenciaControl : HeaderFor CuerpoFor
 159                   | ID ':' HeaderFor CuerpoFor
 160                   | HeaderForID CuerpoFor ELSE cte ';'
 161                   | HeaderForID CuerpoFor ELSE signo cte ';'

 162  CondicionFor : ID Comparador ID
 163               | ID Comparador Expresion
 164               | ID Comparador CTE_ENTERA
 165               | ID Comparador signo CTE_ENTERA

 166  SentenciaCorte : SentenciaReturn
 167                 | BREAK ';'
 168                 | BREAK cte ';'
 169                 | BREAK signo cte ';'
 170                 | CONTINUE ':' ID ';'

state 0
	$accept : . Programa $end  (0)

	error  shift 1
	ID  shift 2
	.  error

	Programa  goto 3
	Nombre_programa  goto 4


state 1
	Programa : error . '}'  (4)

	'}'  shift 5
	.  error


state 2
	Nombre_programa : ID .  (5)

	.  reduce 5


state 3
	$accept : Programa . $end  (0)

	$end  accept


state 4
	Programa : Nombre_programa . '{' ListSentencias '}'  (1)
	Programa : Nombre_programa . ListSentencias '}'  (2)
	Programa : Nombre_programa . ListSentencias  (3)

	error  shift 6
	IF  shift 7
	OUT  shift 8
	FUN  shift 9
	I8  shift 10
	F32  shift 11
	WHEN  shift 12
	CTE_ENTERA  shift 13
	CTE_FLOTANTE  shift 14
	ID  shift 15
	MAYOR_IGUAL  shift 16
	MENOR_IGUAL  shift 17
	DISTINTO  shift 18
	CONST  shift 19
	TOF32  shift 20
	FOR  shift 21
	'+'  shift 22
	'-'  shift 23
	'{'  shift 24
	'('  shift 25
	'<'  shift 26
	'>'  shift 27
	'='  shift 28
	.  error

	ListSentencias  goto 29
	SentenciaControl  goto 30
	SentenciaDeclarativa  goto 31
	SentenciaEjecutable  goto 32
	Tipo  goto 33
	ListVariables  goto 34
	Funcion  goto 35
	WhenCondicion  goto 36
	signo  goto 37
	cte  goto 38
	HeaderFuncion  goto 39
	Fun  goto 40
	Seleccion  goto 41
	Asig  goto 42
	Salida  goto 43
	Expresion  goto 44
	HeaderWhen  goto 45
	Condicion  goto 46
	ConversionExplicita  goto 47
	HeaderIf  goto 48
	Comparacion  goto 49
	Comparador  goto 50
	HeaderFor  goto 51
	HeaderForID  goto 52


state 5
	Programa : error '}' .  (4)

	.  reduce 4


state 6
	WhenCondicion : error . '}'  (64)
	HeaderIf : error . THEN  (108)
	Seleccion : error . ELSE  (117)
	Seleccion : error . END_IF  (118)
	Comparacion : error . ID  (142)
	Comparacion : error . cte  (143)

	THEN  shift 53
	ELSE  shift 54
	END_IF  shift 55
	CTE_ENTERA  shift 13
	CTE_FLOTANTE  shift 14
	ID  shift 56
	'}'  shift 57
	.  error

	cte  goto 58


state 7
	HeaderIf : IF . Condicion THEN  (107)

	error  shift 59
	CTE_ENTERA  shift 13
	CTE_FLOTANTE  shift 14
	ID  shift 60
	MAYOR_IGUAL  shift 16
	MENOR_IGUAL  shift 17
	DISTINTO  shift 18
	TOF32  shift 20
	'+'  shift 22
	'-'  shift 23
	'('  shift 61
	'<'  shift 26
	'>'  shift 27
	'='  shift 28
	.  error

	signo  goto 37
	cte  goto 38
	Expresion  goto 44
	Condicion  goto 62
	ConversionExplicita  goto 47
	Comparacion  goto 49
	Comparador  goto 50


state 8
	Salida : OUT . '(' CADENA_MULT ')'  (65)

	'('  shift 63
	.  error


state 9
	HeaderFuncion : FUN . '(' Parametro ',' Parametro ')' ':' Tipo  (36)
	HeaderFuncion : FUN . '(' Parametro ')' ':' Tipo  (37)
	HeaderFuncion : FUN . '(' ')' ':' Tipo  (38)
	Fun : FUN . ID  (42)

	ID  shift 64
	'('  shift 65
	.  error


state 10
	Tipo : I8 .  (28)

	.  reduce 28


state 11
	Tipo : F32 .  (29)

	.  reduce 29


state 12
	HeaderWhen : WHEN . Condicion THEN  (60)
	HeaderWhen : WHEN . Condicion  (62)

	error  shift 59
	CTE_ENTERA  shift 13
	CTE_FLOTANTE  shift 14
	ID  shift 60
	MAYOR_IGUAL  shift 16
	MENOR_IGUAL  shift 17
	DISTINTO  shift 18
	TOF32  shift 20
	'+'  shift 22
	'-'  shift 23
	'('  shift 61
	'<'  shift 26
	'>'  shift 27
	'='  shift 28
	.  error

	signo  goto 37
	cte  goto 38
	Expresion  goto 44
	Condicion  goto 66
	ConversionExplicita  goto 47
	Comparacion  goto 49
	Comparador  goto 50


state 13
	cte : CTE_ENTERA .  (95)

	.  reduce 95


state 14
	cte : CTE_FLOTANTE .  (94)

	.  reduce 94


state 15
	ListVariables : ID . ',' ListVariables  (30)
	ListVariables : ID .  (31)
	ListVariables : ID . ListVariables  (32)
	Asig : ID . ASIGNACION Expresion ';'  (55)
	Asig : ID . ASIGNACION ID ';'  (56)
	Asig : ID . ASIGNACION cte ';'  (57)
	Asig : ID . ASIGNACION signo cte ';'  (58)
	Asig : ID . error ';'  (59)
	Expresion : ID . signo ID  (70)
	Expresion : ID . signo cte  (71)
	Expresion : ID . '*' ID  (74)
	Expresion : ID . '/' ID  (75)
	Expresion : ID . '*' cte  (76)
	Expresion : ID . '/' cte  (77)
	Expresion : ID . ListParametrosInv  (86)
	Comparacion : ID . Comparador Expresion  (134)
	Comparacion : ID . Comparador cte  (137)
	Comparacion : ID . Comparador signo cte  (138)
	Comparacion : ID . Comparador ID  (139)
	HeaderForID : ID . ASIGNACION HeaderFor  (152)
	SentenciaControl : ID . ':' HeaderFor CuerpoFor  (159)

	error  shift 67
	ID  shift 68
	ASIGNACION  shift 69
	MAYOR_IGUAL  shift 16
	MENOR_IGUAL  shift 17
	DISTINTO  shift 18
	'+'  shift 22
	'-'  shift 23
	'*'  shift 70
	'/'  shift 71
	','  shift 72
	'('  shift 73
	':'  shift 74
	'<'  shift 26
	'>'  shift 27
	'='  shift 28
	';'  reduce 31

	ListVariables  goto 75
	signo  goto 76
	ListParametrosInv  goto 77
	Comparador  goto 78


state 16
	Comparador : MAYOR_IGUAL .  (124)

	.  reduce 124


state 17
	Comparador : MENOR_IGUAL .  (125)

	.  reduce 125


state 18
	Comparador : DISTINTO .  (127)

	.  reduce 127


state 19
	SentenciaDeclarativa : CONST . ListCte ';'  (15)

	ID  shift 79
	ASIGNACION  shift 80
	.  error

	ListCte  goto 81
	AsigCte  goto 82


state 20
	ConversionExplicita : TOF32 . '(' Expresion ')'  (90)
	ConversionExplicita : TOF32 . '(' ')'  (91)

	'('  shift 83
	.  error


state 21
	HeaderFor : FOR . '(' AsigFor ';' CondicionFor ';' signo CTE_ENTERA ')'  (150)
	HeaderFor : FOR . '(' AsigFor ';' CondicionFor ';' CTE_ENTERA ')'  (151)

	'('  shift 84
	.  error


state 22
	signo : '+' .  (92)

	.  reduce 92


state 23
	signo : '-' .  (93)

	.  reduce 93


state 24
	Programa : Nombre_programa '{' . ListSentencias '}'  (1)
	Funcion : '{' . Cuerpo '}'  (45)

	error  shift 6
	IF  shift 7
	OUT  shift 8
	FUN  shift 9
	RETURN  shift 85
	I8  shift 10
	F32  shift 11
	WHEN  shift 12
	CTE_ENTERA  shift 13
	CTE_FLOTANTE  shift 14
	ID  shift 15
	MAYOR_IGUAL  shift 16
	MENOR_IGUAL  shift 17
	DISTINTO  shift 18
	CONST  shift 19
	TOF32  shift 20
	FOR  shift 21
	'+'  shift 22
	'-'  shift 23
	'{'  shift 86
	'('  shift 25
	'<'  shift 26
	'>'  shift 27
	'='  shift 28
	.  error

	ListSentencias  goto 87
	SentenciaControl  goto 30
	SentenciaDeclarativa  goto 88
	SentenciaEjecutable  goto 89
	Tipo  goto 33
	ListVariables  goto 34
	Funcion  goto 35
	WhenCondicion  goto 36
	signo  goto 37
	cte  goto 38
	HeaderFuncion  goto 39
	Fun  goto 40
	Cuerpo  goto 90
	SentenciaReturn  goto 91
	Seleccion  goto 41
	Asig  goto 42
	Salida  goto 43
	Expresion  goto 44
	HeaderWhen  goto 45
	Condicion  goto 46
	ConversionExplicita  goto 47
	HeaderIf  goto 48
	Comparacion  goto 49
	Comparador  goto 50
	HeaderFor  goto 51
	HeaderForID  goto 52


state 25
	Salida : '(' . CADENA_MULT ')'  (66)
	Condicion : '(' . Comparacion ')'  (119)
	Condicion : '(' . Comparacion  (120)

	error  shift 59
	CTE_ENTERA  shift 13
	CTE_FLOTANTE  shift 14
	ID  shift 60
	CADENA_MULT  shift 92
	MAYOR_IGUAL  shift 16
	MENOR_IGUAL  shift 17
	DISTINTO  shift 18
	TOF32  shift 20
	'+'  shift 22
	'-'  shift 23
	'<'  shift 26
	'>'  shift 27
	'='  shift 28
	.  error

	signo  goto 37
	cte  goto 38
	Expresion  goto 44
	ConversionExplicita  goto 47
	Comparacion  goto 93
	Comparador  goto 50


state 26
	Comparador : '<' .  (122)

	.  reduce 122


state 27
	Comparador : '>' .  (123)

	.  reduce 123


state 28
	Comparador : '=' .  (126)

	.  reduce 126


state 29
	Programa : Nombre_programa ListSentencias . '}'  (2)
	Programa : Nombre_programa ListSentencias .  (3)

	'}'  shift 94
	$end  reduce 3


state 30
	ListSentencias : SentenciaControl . ListSentencias  (6)
	ListSentencias : SentenciaControl .  (10)

	error  shift 6
	IF  shift 7
	OUT  shift 8
	FUN  shift 9
	I8  shift 10
	F32  shift 11
	WHEN  shift 12
	CTE_ENTERA  shift 13
	CTE_FLOTANTE  shift 14
	ID  shift 15
	MAYOR_IGUAL  shift 16
	MENOR_IGUAL  shift 17
	DISTINTO  shift 18
	CONST  shift 19
	TOF32  shift 20
	FOR  shift 21
	'+'  shift 22
	'-'  shift 23
	'{'  shift 86
	'('  shift 25
	'<'  shift 26
	'>'  shift 27
	'='  shift 28
	$end  reduce 10
	'}'  reduce 10

	ListSentencias  goto 95
	SentenciaControl  goto 30
	SentenciaDeclarativa  goto 31
	SentenciaEjecutable  goto 32
	Tipo  goto 33
	ListVariables  goto 34
	Funcion  goto 35
	WhenCondicion  goto 36
	signo  goto 37
	cte  goto 38
	HeaderFuncion  goto 39
	Fun  goto 40
	Seleccion  goto 41
	Asig  goto 42
	Salida  goto 43
	Expresion  goto 44
	HeaderWhen  goto 45
	Condicion  goto 46
	ConversionExplicita  goto 47
	HeaderIf  goto 48
	Comparacion  goto 49
	Comparador  goto 50
	HeaderFor  goto 51
	HeaderForID  goto 52


state 31
	ListSentencias : SentenciaDeclarativa . ListSentencias  (7)
	ListSentencias : SentenciaDeclarativa .  (11)

	error  shift 6
	IF  shift 7
	OUT  shift 8
	FUN  shift 9
	I8  shift 10
	F32  shift 11
	WHEN  shift 12
	CTE_ENTERA  shift 13
	CTE_FLOTANTE  shift 14
	ID  shift 15
	MAYOR_IGUAL  shift 16
	MENOR_IGUAL  shift 17
	DISTINTO  shift 18
	CONST  shift 19
	TOF32  shift 20
	FOR  shift 21
	'+'  shift 22
	'-'  shift 23
	'{'  shift 86
	'('  shift 25
	'<'  shift 26
	'>'  shift 27
	'='  shift 28
	$end  reduce 11
	'}'  reduce 11

	ListSentencias  goto 96
	SentenciaControl  goto 30
	SentenciaDeclarativa  goto 31
	SentenciaEjecutable  goto 32
	Tipo  goto 33
	ListVariables  goto 34
	Funcion  goto 35
	WhenCondicion  goto 36
	signo  goto 37
	cte  goto 38
	HeaderFuncion  goto 39
	Fun  goto 40
	Seleccion  goto 41
	Asig  goto 42
	Salida  goto 43
	Expresion  goto 44
	HeaderWhen  goto 45
	Condicion  goto 46
	ConversionExplicita  goto 47
	HeaderIf  goto 48
	Comparacion  goto 49
	Comparador  goto 50
	HeaderFor  goto 51
	HeaderForID  goto 52


state 32
	ListSentencias : SentenciaEjecutable . ListSentencias  (8)
	ListSentencias : SentenciaEjecutable .  (9)

	error  shift 6
	IF  shift 7
	OUT  shift 8
	FUN  shift 9
	I8  shift 10
	F32  shift 11
	WHEN  shift 12
	CTE_ENTERA  shift 13
	CTE_FLOTANTE  shift 14
	ID  shift 15
	MAYOR_IGUAL  shift 16
	MENOR_IGUAL  shift 17
	DISTINTO  shift 18
	CONST  shift 19
	TOF32  shift 20
	FOR  shift 21
	'+'  shift 22
	'-'  shift 23
	'{'  shift 86
	'('  shift 25
	'<'  shift 26
	'>'  shift 27
	'='  shift 28
	$end  reduce 9
	'}'  reduce 9

	ListSentencias  goto 97
	SentenciaControl  goto 30
	SentenciaDeclarativa  goto 31
	SentenciaEjecutable  goto 32
	Tipo  goto 33
	ListVariables  goto 34
	Funcion  goto 35
	WhenCondicion  goto 36
	signo  goto 37
	cte  goto 38
	HeaderFuncion  goto 39
	Fun  goto 40
	Seleccion  goto 41
	Asig  goto 42
	Salida  goto 43
	Expresion  goto 44
	HeaderWhen  goto 45
	Condicion  goto 46
	ConversionExplicita  goto 47
	HeaderIf  goto 48
	Comparacion  goto 49
	Comparador  goto 50
	HeaderFor  goto 51
	HeaderForID  goto 52


state 33
	SentenciaDeclarativa : Tipo . ListVariables ';'  (12)
	SentenciaDeclarativa : Tipo . error ';'  (13)
	SentenciaDeclarativa : Tipo . ';'  (18)

	error  shift 98
	ID  shift 68
	';'  shift 99
	.  error

	ListVariables  goto 100


state 34
	SentenciaDeclarativa : ListVariables . ';'  (17)

	';'  shift 101
	.  error


state 35
	SentenciaDeclarativa : Funcion .  (14)

	.  reduce 14


state 36
	SentenciaDeclarativa : WhenCondicion .  (16)

	.  reduce 16


state 37
	Comparacion : signo . cte Comparador Expresion  (132)
	Comparacion : signo . cte Comparador ID  (136)

	CTE_ENTERA  shift 13
	CTE_FLOTANTE  shift 14
	.  error

	cte  goto 102


state 38
	Expresion : cte . signo ID  (83)
	Expresion : cte . '*' ID  (84)
	Expresion : cte . '/' ID  (85)
	Comparacion : cte . Comparador Expresion  (131)
	Comparacion : cte . Comparador ID  (135)
	Comparacion : cte . Comparador cte  (140)

	MAYOR_IGUAL  shift 16
	MENOR_IGUAL  shift 17
	DISTINTO  shift 18
	'+'  shift 22
	'-'  shift 23
	'*'  shift 103
	'/'  shift 104
	'<'  shift 26
	'>'  shift 27
	'='  shift 28
	.  error

	signo  goto 105
	Comparador  goto 106


state 39
	Funcion : HeaderFuncion . '{' Cuerpo '}'  (43)
	Funcion : HeaderFuncion . '{' '}'  (44)
	Funcion : HeaderFuncion . '{' ListSentencias '}'  (46)

	'{'  shift 107
	.  error


state 40
	HeaderFuncion : Fun . '(' Parametro ',' Parametro ')' ':' Tipo  (33)
	HeaderFuncion : Fun . '(' Parametro ')' ':' Tipo  (34)
	HeaderFuncion : Fun . '(' ')' ':' Tipo  (35)
	HeaderFuncion : Fun . '(' Parametro ',' Parametro ')' ':'  (39)
	HeaderFuncion : Fun . '(' Parametro ')' ':'  (40)
	HeaderFuncion : Fun . '(' ')' ':'  (41)

	'('  shift 108
	.  error


state 41
	SentenciaEjecutable : Seleccion .  (52)

	.  reduce 52


state 42
	SentenciaEjecutable : Asig .  (53)

	.  reduce 53


state 43
	SentenciaEjecutable : Salida . ';'  (54)

	';'  shift 109
	.  error


state 44
	Expresion : Expresion . signo ID  (72)
	Expresion : Expresion . signo cte  (73)
	Expresion : Expresion . '*' ID  (78)
	Expresion : Expresion . '/' ID  (79)
	Expresion : Expresion . '*' cte  (80)
	Expresion : Expresion . '/' cte  (81)
	Comparacion : Expresion . Comparador Expresion  (128)
	Comparacion : Expresion . Comparador cte  (129)
	Comparacion : Expresion . Comparador signo cte  (130)
	Comparacion : Expresion . Comparador ID  (133)

	MAYOR_IGUAL  shift 16
	MENOR_IGUAL  shift 17
	DISTINTO  shift 18
	'+'  shift 22
	'-'  shift 23
	'*'  shift 110
	'/'  shift 111
	'<'  shift 26
	'>'  shift 27
	'='  shift 28
	.  error

	signo  goto 112
	Comparador  goto 113


state 45
	WhenCondicion : HeaderWhen . '{' ListSentencias '}'  (63)

	'{'  shift 114
	.  error


state 46
	HeaderWhen : Condicion . THEN  (61)

	THEN  shift 115
	.  error


state 47
	Expresion : ConversionExplicita .  (82)

	.  reduce 82


state 48
	Seleccion : HeaderIf . CuerpoIf END_IF  (114)
	Seleccion : HeaderIf . CuerpoIf CuerpoElse  (115)
	Seleccion : HeaderIf . CuerpoIf error  (116)

	error  shift 116
	IF  shift 7
	OUT  shift 8
	ID  shift 117
	'{'  shift 118
	'('  shift 119
	.  error

	SentenciaEjecutable  goto 120
	Seleccion  goto 41
	Asig  goto 42
	Salida  goto 43
	HeaderIf  goto 48
	SentenciasIf  goto 121
	CuerpoIf  goto 122


state 49
	Condicion : Comparacion . ')'  (121)

	')'  shift 123
	.  error


state 50
	Comparacion : Comparador . error  (141)

	error  shift 124
	.  error


state 51
	SentenciaControl : HeaderFor . CuerpoFor  (158)

	'{'  shift 125
	.  error

	CuerpoFor  goto 126


state 52
	SentenciaControl : HeaderForID . CuerpoFor ELSE cte ';'  (160)
	SentenciaControl : HeaderForID . CuerpoFor ELSE signo cte ';'  (161)

	'{'  shift 125
	.  error

	CuerpoFor  goto 127


state 53
	HeaderIf : error THEN .  (108)

	.  reduce 108


state 54
	Seleccion : error ELSE .  (117)

	.  reduce 117


state 55
	Seleccion : error END_IF .  (118)

	.  reduce 118


state 56
	Comparacion : error ID .  (142)

	.  reduce 142


state 57
	WhenCondicion : error '}' .  (64)

	.  reduce 64


state 58
	Comparacion : error cte .  (143)

	.  reduce 143


state 59
	Comparacion : error . ID  (142)
	Comparacion : error . cte  (143)

	CTE_ENTERA  shift 13
	CTE_FLOTANTE  shift 14
	ID  shift 56
	.  error

	cte  goto 58


state 60
	Expresion : ID . signo ID  (70)
	Expresion : ID . signo cte  (71)
	Expresion : ID . '*' ID  (74)
	Expresion : ID . '/' ID  (75)
	Expresion : ID . '*' cte  (76)
	Expresion : ID . '/' cte  (77)
	Expresion : ID . ListParametrosInv  (86)
	Comparacion : ID . Comparador Expresion  (134)
	Comparacion : ID . Comparador cte  (137)
	Comparacion : ID . Comparador signo cte  (138)
	Comparacion : ID . Comparador ID  (139)

	MAYOR_IGUAL  shift 16
	MENOR_IGUAL  shift 17
	DISTINTO  shift 18
	'+'  shift 22
	'-'  shift 23
	'*'  shift 70
	'/'  shift 71
	'('  shift 73
	'<'  shift 26
	'>'  shift 27
	'='  shift 28
	.  error

	signo  goto 76
	ListParametrosInv  goto 77
	Comparador  goto 78


state 61
	Condicion : '(' . Comparacion ')'  (119)
	Condicion : '(' . Comparacion  (120)

	error  shift 59
	CTE_ENTERA  shift 13
	CTE_FLOTANTE  shift 14
	ID  shift 60
	MAYOR_IGUAL  shift 16
	MENOR_IGUAL  shift 17
	DISTINTO  shift 18
	TOF32  shift 20
	'+'  shift 22
	'-'  shift 23
	'<'  shift 26
	'>'  shift 27
	'='  shift 28
	.  error

	signo  goto 37
	cte  goto 38
	Expresion  goto 44
	ConversionExplicita  goto 47
	Comparacion  goto 93
	Comparador  goto 50


state 62
	HeaderIf : IF Condicion . THEN  (107)

	THEN  shift 128
	.  error


state 63
	Salida : OUT '(' . CADENA_MULT ')'  (65)

	CADENA_MULT  shift 129
	.  error


state 64
	Fun : FUN ID .  (42)

	.  reduce 42


state 65
	HeaderFuncion : FUN '(' . Parametro ',' Parametro ')' ':' Tipo  (36)
	HeaderFuncion : FUN '(' . Parametro ')' ':' Tipo  (37)
	HeaderFuncion : FUN '(' . ')' ':' Tipo  (38)

	I8  shift 10
	F32  shift 11
	ID  shift 130
	')'  shift 131
	.  error

	Tipo  goto 132
	Parametro  goto 133


state 66
	HeaderWhen : WHEN Condicion . THEN  (60)
	HeaderWhen : WHEN Condicion .  (62)

	THEN  shift 134
	'{'  reduce 62


state 67
	Asig : ID error . ';'  (59)

	';'  shift 135
	.  error


state 68
	ListVariables : ID . ',' ListVariables  (30)
	ListVariables : ID .  (31)
	ListVariables : ID . ListVariables  (32)

	ID  shift 68
	','  shift 72
	';'  reduce 31

	ListVariables  goto 75


state 69
	Asig : ID ASIGNACION . Expresion ';'  (55)
	Asig : ID ASIGNACION . ID ';'  (56)
	Asig : ID ASIGNACION . cte ';'  (57)
	Asig : ID ASIGNACION . signo cte ';'  (58)
	HeaderForID : ID ASIGNACION . HeaderFor  (152)

	CTE_ENTERA  shift 13
	CTE_FLOTANTE  shift 14
	ID  shift 136
	TOF32  shift 20
	FOR  shift 21
	'+'  shift 22
	'-'  shift 23
	.  error

	signo  goto 137
	cte  goto 138
	Expresion  goto 139
	ConversionExplicita  goto 47
	HeaderFor  goto 140


state 70
	Expresion : ID '*' . ID  (74)
	Expresion : ID '*' . cte  (76)

	CTE_ENTERA  shift 13
	CTE_FLOTANTE  shift 14
	ID  shift 141
	.  error

	cte  goto 142


state 71
	Expresion : ID '/' . ID  (75)
	Expresion : ID '/' . cte  (77)

	CTE_ENTERA  shift 13
	CTE_FLOTANTE  shift 14
	ID  shift 143
	.  error

	cte  goto 144


state 72
	ListVariables : ID ',' . ListVariables  (30)

	ID  shift 68
	.  error

	ListVariables  goto 145


state 73
	ListParametrosInv : '(' . ')'  (87)
	ListParametrosInv : '(' . ParametroReal ')'  (88)
	ListParametrosInv : '(' . ParametroReal ',' ParametroReal ')'  (89)

	CTE_ENTERA  shift 13
	CTE_FLOTANTE  shift 14
	ID  shift 146
	'+'  shift 22
	'-'  shift 23
	')'  shift 147
	.  error

	signo  goto 148
	cte  goto 149
	ParametroReal  goto 150


state 74
	SentenciaControl : ID ':' . HeaderFor CuerpoFor  (159)

	FOR  shift 21
	.  error

	HeaderFor  goto 151


state 75
	ListVariables : ID ListVariables .  (32)

	.  reduce 32


state 76
	Expresion : ID signo . ID  (70)
	Expresion : ID signo . cte  (71)

	CTE_ENTERA  shift 13
	CTE_FLOTANTE  shift 14
	ID  shift 152
	.  error

	cte  goto 153


state 77
	Expresion : ID ListParametrosInv .  (86)

	.  reduce 86


state 78
	Comparacion : ID Comparador . Expresion  (134)
	Comparacion : ID Comparador . cte  (137)
	Comparacion : ID Comparador . signo cte  (138)
	Comparacion : ID Comparador . ID  (139)

	CTE_ENTERA  shift 13
	CTE_FLOTANTE  shift 14
	ID  shift 154
	TOF32  shift 20
	'+'  shift 22
	'-'  shift 23
	.  error

	signo  goto 155
	cte  goto 156
	Expresion  goto 157
	ConversionExplicita  goto 47


state 79
	AsigCte : ID . ASIGNACION CTE_ENTERA  (21)
	AsigCte : ID . ASIGNACION signo CTE_ENTERA  (22)
	AsigCte : ID . ASIGNACION CTE_FLOTANTE  (23)
	AsigCte : ID . ASIGNACION signo CTE_FLOTANTE  (24)
	AsigCte : ID . ASIGNACION  (26)
	AsigCte : ID . cte  (27)

	CTE_ENTERA  shift 13
	CTE_FLOTANTE  shift 14
	ASIGNACION  shift 158
	.  error

	cte  goto 159


state 80
	AsigCte : ASIGNACION . cte  (25)

	CTE_ENTERA  shift 13
	CTE_FLOTANTE  shift 14
	.  error

	cte  goto 160


state 81
	SentenciaDeclarativa : CONST ListCte . ';'  (15)
	ListCte : ListCte . ',' AsigCte  (20)

	';'  shift 161
	','  shift 162
	.  error


state 82
	ListCte : AsigCte .  (19)

	.  reduce 19


state 83
	ConversionExplicita : TOF32 '(' . Expresion ')'  (90)
	ConversionExplicita : TOF32 '(' . ')'  (91)

	CTE_ENTERA  shift 13
